# squba-machine

./: submarinesGame.sln  submarinesGameVS.sln  submarinesGameVS.vcxproj  submarinesGameVS.vcxproj.filters
Common/: Board.cpp  Board.h  Common.vcxproj  Common.vcxproj.filters  Logger.cpp  Logger.h
DllKnownStepsAlgo/: DllKnownStepsAlgo.cpp  DllKnownStepsAlgo.h  DllKnownStepsAlgo.vcxproj  DllKnownStepsAlgo.vcxproj.filters
DllNaiveAlgo/: DllNaiveAlgo.cpp  DllNaiveAlgo.h  DllNaiveAlgo.vcxproj  DllNaiveAlgo.vcxproj.filters  ReadMe.txt  stdafx.cpp
DllSmartAlgo/: DllSmartAlgo.vcxproj  DllSmartAlgo.vcxproj.filters
enc_temp_folder/22a8679a9ce16422e1bfb606a16b93d/: GameBasicData.h
enc_temp_folder/fd2a14bbf23881cebb57a1cd2039ada/: submarinesGame.cpp
ex3/: Board.cpp  BoardCreator.h  CMakeLists.txt  DllSmartAlgo.cpp  DllSmartAlgo.h  Exception.cpp  GameBasicData.cpp  GameBasicData.h  GameInfo.cpp  GameManager.h  Logger.cpp  Macros.h  PlayerInfo.cpp  PlayerInfo.h  Sizes.h  Utilities.cpp  submarinesGame.h
source/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BoardCreator.cpp  CMakeCache.txt  DllKnownStepsAlgo.h  DllNaiveAlgo.cpp  DllNaiveAlgo.h  Exception.cpp  Game.h  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ex2.meitalswissa.file.vcxproj  ex2.meitalswissa.file.vcxproj.filters  ex2.meitalswissa.naive.vcxproj  ex2.meitalswissa.naive.vcxproj.filters  ex2.meitalswissa.smart.vcxproj  ex2.meitalswissa.smart.vcxproj.filters  ex2.meitalswissa.vcxproj  ex2.meitalswissa.vcxproj.filters  submarinesGame.cpp
source/ex2_302461876_315474197/: CMakeLists.txt  DllKnownStepsAlgo.cpp  DllSmartAlgo.h  GUIBoard.cpp  Macros.h  Sizes.h  Utilities.cpp  students.txt
submarinesGame/: BoardCreator.cpp  BoardCreator.h  DllSmartAlgo.cpp  DllSmartAlgo.h  Exception.cpp  Exception.h  GUIBoard.cpp  GUIBoard.h  Game.cpp  Game.h  GameBasicData.cpp  GameBasicData.h  GameInfo.cpp  GameInfo.h  GameManager.cpp  GameManager.h  IBattleshipGameAlgo.cpp  IBattleshipGameAlgo.h  ISmarterAlgo.h  ISubmarinesGameAlgo.cpp  ISubmarinesGameAlgo.h  Macros.h  NaiveAlgo.cpp  NaiveAlgo.h  Player.cpp  Player.h  PlayerInfo.cpp  PlayerInfo.h  Ship.cpp  Ship.h  Sizes.h  SmartAlgo.cpp  SmartAlgo.h  Utilities.cpp  Utilities.h  file_names.txt  submarinesGame.cpp  submarinesGame.h  submarinesGame.vcxproj  submarinesGame.vcxproj.filters
submarinesGame/justATest/: ISmarterAlgo.h  NaiveAlgo.cpp  clean_movesA.attack-a  s.sboard.txt
templateGroups/: Coord.h  Matrix.h  Matrix2d.h  main.cpp  main2d.cpp  templateGroups.vcxproj  templateGroups.vcxproj.filters
templateProject/: ReadMe.txt  stdafx.cpp  templateProject.cpp  templateProject.vcxproj  templateProject.vcxproj.filters
